src/assets/Styles/Style.css
:root {
  --primary-color: #0ca554;
  --secondary-color: #151515;
  --border-color: #2d2d2d;
}

/* Global Styles */
.highlight {
  color: var(--primary-color) !important;
}

.custom-bg {
  background-color: var(--primary-color);
}

.custom-border {
  border-color: var(--border-color) !important;
  box-shadow: 0px -1px 0px 0px rgba(255, 255, 255, 0.1) !important;
}

/* Global Button */
.button {
  padding: 12px 24px;
  border: 1px solid var(--primary-color);
  transition: all 0.2s ease-in;
  font-size: 19px;
  cursor: pointer;
  color: black;
  background-color: var(--secondary-color);
  z-index: 1;
}

.button:before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) scaleY(1) scaleX(1.25);
  top: 100%;
  width: 140%;
  height: 180%;
  background-color: rgba(255, 255, 255, 0.05);
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.button:after {
  content: "";
  position: absolute;
  left: 55%;
  transform: translateX(-50%) scaleY(1) scaleX(1.45);
  top: 180%;
  width: 160%;
  height: 190%;
  background-color: var(--primary-color);
  border-radius: 50%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.button:hover {
  color: #ffffff;
  border: 1px solid var(--primary-color);
}

.button:hover:before {
  top: -35%;
  background-color: var(--primary-color);
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

.button:hover:after {
  top: -45%;
  background-color: var(--primary-color);
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

/* Page Banner */
.page-banner {
  background-image: linear-gradient(
      125deg,
      rgba(12, 165, 84, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("/src/assets/Images/hero2.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 50vh;
}

/* Header */
.header,
.footer,
.offcanvas {
  background-color: var(--secondary-color);
}

.hover-link:hover,
.nav-link:hover {
  color: var(--primary-color) !important;
  text-decoration: none;
}

.dropdown-menu {
  border-top: 5px solid var(--primary-color) !important;
  top: 60px;
}

.dropdown-item:hover {
  color: var(--background-shade2) !important;
}

/* Social icons */
.child {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  transform-style: preserve-3d;
  transition: all 0.3s cubic-bezier(0.68, 0.85, 0.265, 1.85);
  margin: 0 5px;
  box-shadow: inset 1px 1px 2px #fff, 0 0 5px var(--primary-color);
}

.child:hover {
  background-color: white;
  background-position: -100px 100px, -100px 100px;
  /*transform: rotate3d(0.5, 1, 0, 30deg);*/
  transform: perspective(180px) rotateX(60deg) translateY(2px);
}

.child-1:hover {
  box-shadow: 0px 10px 10px var(--primary-color);
}
.child-2:hover {
  box-shadow: 0px 10px 10px var(--primary-color);
}
.child-3:hover {
  box-shadow: 0px 10px 10px var(--primary-color);
}

.parent .social-button {
  transition-duration: 0.5s;
  transition-timing-function: cubic-bezier(0.68, -0.85, 0.265, 1.55);
}

.child:hover > .social-button {
  transform: translate3d(0px, 20px, 30px) perspective(80px) rotateX(-60deg)
    translateY(2px) translateZ(10px);
}

/* Footer */
.overlay {
  transition: all 0.2s ease-in;
  z-index: 1;
}

.overlay:before {
  content: "";
  position: absolute;
  left: 50%;
  transform: translateX(-50%) scaleY(1) scaleX(1.25);
  top: 100%;
  width: 140%;
  height: 180%;
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.overlay:after {
  content: "";
  position: absolute;
  left: 55%;
  transform: translateX(-50%) scaleY(1) scaleX(1.45);
  top: 180%;
  width: 160%;
  height: 190%;
  background-color: rgba(0, 0, 0, 0.3);
  display: block;
  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
  z-index: -1;
}

.overlay:hover:before {
  top: -35%;
  background-color: rgba(0, 0, 0, 0.3);
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

.overlay:hover:after {
  top: -45%;
  background-color: rgba(0, 0, 0, 0.3);
  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
}

/* Home Page */
/* Hero Section */
#heroCarousel {
  min-height: 100vh;
}
#heroCarousel::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.3);
}

#heroCarousel::after {
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 32%;
  background: #00ac75;
  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 150% 100%);
  mix-blend-mode: multiply;
}

.bar {
  content: "";
  position: absolute;
  right: 38%;
  top: -8%;
  bottom: 0;
  width: 3%;
  background: rgba(0, 0, 0, 0.5);
  mix-blend-mode: multiply;
  transform: rotate(-46deg);
  transform-origin: top right;
  height: 130vh;
  z-index: 100;
}

/* indicators (dots) near bottom-right */
.carousel-indicators-container {
  bottom: 100px;
}

.carousel-indicators [data-bs-target] {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.6);
  border: none;
  margin: 0 5px;
  transition: all 0.3s ease;
}

.carousel-indicators .active {
  background-color: #fff;
  transform: scale(1.2);
}
.carousel-arrows {
  bottom: 220px;
  z-index: 1000;
}
.arrow-btn {
  background: rgba(255, 255, 255, 0.2);
  color: white;
  width: 60px;
  height: 60px;
  transition: all 0.3s ease;
  font-size: 1.5rem;
  cursor: pointer;
}
.arrow-btn:hover {
  background: rgba(255, 255, 255, 0.3);
  transform: scale(1.1);
}

/* Services-list */
.department-bg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.02;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  z-index: 0;
}

.department-icon {
  top: -56px;
  right: -75px;
  width: 145px;
  height: 145px;
  background-color: #f3f3f3;
}

.department-icon:before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  content: "";
  border-radius: 50%;
  background-color: var(--secondary-color);
  transform: scale(0);
  transform-origin: center;
  transform-style: preserve-3d;
  transition: all 0.4s cubic-bezier(0.62, 0.21, 0.45, 1.52);
  z-index: -1;
}

.department-card:hover .department-icon:before {
  transform: scaleX(1);
}

.department-icon i {
  font-size: 34px;
  color: var(--govity-base);
  position: relative;
  top: 24px;
  right: 12px;
  transition: all 500ms linear;
  transition-delay: 0.1s;
  transform: scale(1);
}

.department-card:hover .department-icon i {
  transform: scale(0.9);
  color: var(--govity-white);
}

.department-title {
  top: -30px;
}

/* Smartphones (portrait and landscape) */
@media (max-width: 480px) {
  .department-icon {
    top: -56px;
    right: -75px;
  }

  #heroCarousel::after {
    width: 52%;
  }

  .bar {
    right: 60%;
    top: -8%;
    transform: rotate(-20deg);
  }
}

/* Tablets (portrait and landscape) */
@media (max-width: 950px) {
  .department-icon {
    top: -56px;
    right: -215px;
  }
}

/* About Section */
.secondary-photo {
  bottom: -10px;
  right: 15px;
  width: 320px;
  height: 320px;
}

.about-badge {
  bottom: 30px;
  left: 80px;
}

.video-link {
  top: 83px;
  right: 138px;
}

.video-icon {
  width: 80px;
  height: 80px;
  line-height: 80px;
  background-color: var(--primary-color);
  transition: all 0.5s ease;
}

.video-icon:hover {
  background-color: var(--secondary-color);
}

.video-icon:before {
  position: absolute;
  top: -20px;
  left: -20px;
  right: -20px;
  bottom: -20px;
  content: "";
  border: 1px solid #dddddd;
}

.video-icon:after {
  position: absolute;
  top: -40px;
  left: -40px;
  right: -40px;
  bottom: -40px;
  content: "";
  border: 1px solid #dddddd;
}

.video-link .ripple,
.video-icon .ripple:before,
.video-icon .ripple:after {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 160px;
  height: 160px;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 0 0 rgba(12, 165, 84, 0.6);
  animation: ripple 3s infinite;
}

.video-icon .ripple:before {
  animation-delay: 0.9s;
  content: "";
  position: absolute;
}

.video-icon .ripple:after {
  animation-delay: 0.6s;
  content: "";
  position: absolute;
}

@keyframes ripple {
  70% {
    box-shadow: 0 0 0 40px rgba(10, 165, 205, 0);
  }

  100% {
    box-shadow: 0 0 0 0 rgba(10, 165, 205, 0);
  }
}

.feature-badge {
  bottom: 20px;
  left: 20px;
  right: 20px;
  transition: all 500ms ease;
  z-index: 1;
}

.icon-wrap {
  top: -59px;
  left: 50%;
  transform: translateX(-50%);
  width: 123px;
  height: 123px;
  background-image: linear-gradient(
    90deg,
    rgb(255, 255, 255) 0%,
    rgb(243, 243, 243) 100%
  );
  z-index: -1;
}

.feature-content {
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;
  background-position: bottom left;
  transform: scale(1, 0);
  transform-origin: bottom center;
  transition: transform 500ms ease;
}

.feature-card:hover .feature-content {
  transform: scale(1, 1);
}

.feature-content-top span {
  transition: all 500ms linear;
  transition-delay: 0.1s;
}

/* Partner Section */
.logos-track {
  animation: scroll-logos 20s linear infinite;
}

.logo-item {
  flex: 0 0 auto;
}

.logo-item img {
  opacity: 0.3;
  transition: 0.5s;
}

.logo-item:hover img {
  opacity: 1;
}

.logos-track:hover {
  animation-play-state: paused;
}

@keyframes scroll-logos {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

/* Video Section */
.parallax-hero {
  height: 50vh;
  background-image: url("../Images/hero3.jpg");
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
}

.video-overlay {
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
}

.parallex-video-icon {
  width: 60px;
  height: 60px;
  background-color: var(--primary-color);
  transition: all 0.5s ease;
}

.parallex-video-icon::before {
  content: "";
  position: absolute;
  top: -9px;
  left: -9px;
  right: -9px;
  bottom: -9px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 50%;
}

.parallex-video-icon:hover {
  background-color: var(--secondary-color);
}

.parallex-video-icon .ripple:before,
.parallex-video-icon .ripple:after {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 81px;
  height: 81px;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 0 0 rgba(243, 243, 243, 0.6);
  animation: ripple 3s infinite;
  border-radius: 50%;
}

.parallex-video-icon .ripple:before {
  -webkit-animation-delay: 0.9s;
  animation-delay: 0.9s;
  content: "";
  position: absolute;
}

.parallex-video-icon .ripple:after {
  -webkit-animation-delay: 0.6s;
  animation-delay: 0.6s;
  content: "";
  position: absolute;
}

/* Back To Top */
.scroll-to-top {
  bottom: 20px;
  right: 30px;
  width: 35px;
  height: 35px;
  transition: transform 0.9s ease, opacity 0.9s ease;
  cursor: pointer;
  opacity: 0;
  transform: translateY(-800px);
  pointer-events: none;
}

.scroll-to-top.show {
  opacity: 1;
  transform: translateY(0);
  pointer-events: auto;
}

.scroll-to-top .ripple,
.scroll-to-top .ripple:before,
.scroll-to-top .ripple:after {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 45px;
  height: 45px;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 0 0 rgba(12, 165, 84, 0.6);
  animation: smallripple 3s infinite;
}

.scroll-to-top .ripple:before {
  animation-delay: 0.9s;
  content: "";
  position: absolute;
}

.scroll-to-top .ripple:after {
  animation-delay: 0.6s;
  content: "";
  position: absolute;
}

@keyframes smallripple {
  70% {
    box-shadow: 0 0 0 10px rgba(10, 165, 205, 0);
  }

  100% {
    box-shadow: 0 0 0 0 rgba(10, 165, 205, 0);
  }
}

/* Contact Page */
.contact-img::before {
  content: "";
  position: absolute;
  top: 28px;
  left: -30px;
  bottom: 32px;
  width: 30px;
  background-color: var(--primary-color);
}

